apps/netpay/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netpay-service
  namespace: nethub
  labels:
    app: netpay
    app.kubernetes.io/name: netpay
    app.kubernetes.io/part-of: netpay
spec:
  type: ClusterIP
  selector:
    app: netpay
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
