apps/netpay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netpay-ingress
  namespace: nethub
  labels:
    app: netpay
    app.kubernetes.io/name: netpay
  annotations:
    kubernetes.io/ingress.className: traefik
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    traefik.ingress.kubernetes.io/custom-response-headers: "Cache-Control: public, max-age=31536000"
spec:
  rules:
    - host: pay.nethub.co.ke
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netpay-service
                port:
                  number: 80
